# MorbitWrapper

./: ..gitignore.kate-swp  .gitignore  MOPClasses.py  OptOptionsClass.py  Pipfile  README.md  __init__.py  apply_patch.sh  compile.jl  globals.py  ipython_log.py  patch_openssl_jll.jl  pyproject.toml  runtime_setup.py  setup.cfg  sysimg.py  test_sysimg.py  utilities.py
.github/workflows/: main.yml
MorbitWrapper/: MOPClasses.py  __init__.py  globals.py  optimization.py  patch_openssl_jll.jl  pycall_sym.jl  utilities.py
MorbitWrapper/examples/: standard_problem.py
MorbitWrapper_manuelbb_upb.egg-info/: PKG-INFO  SOURCES.txt
examples/: matlab_objectives.m  matlab_objectives.py  mop_and_openfoam.py  parallelized_openfoam_mop.py  solve_of.py  solve_of_fourier.py  standard_problem.py  standard_problem_vec_objective.py  test_saving.py
morbitwrapper/: MOPClasses.py  __init__.py  compile_morbit.jl  globals.py  optimization.py  prepare_path.jl  utilities.py
