[build-sytem]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "MorbitWrapper"
version = "0.0.7"
description = "A wrapper for the Morbit MOP solver written in Julia."
authors = ["Manuel Berkemeier <manuelbb@mail.uni-paderborn.de>"]
license = "MIT"
readme="README.md"
repository="https://github.com/manuelbb-upb/MorbitWrapper"

[tool.poetry.dependencies]
python = "^3.8"
julia = "^0.5.6"
numpy = "^1.20.2"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
spyder = "^5.0.0"
spyder-kernels = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
