[metadata]
name = MorbitWrapper-manuelbb-upb
version = 0.0.1
url = https://gitlab.com/manuelbb/MorbitWrapper
author = Manuel Berkemeier
author_email = manuelbb@math.upb.de
classifiers = 
	Programming Language :: Python :: 3
	Licence :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: POSIX :: Linux
description = A wrapper for the Morbit.jl Julia Solver
long_description = file : README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
